510-t9stbot-manifests/discord-bot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      containers:
        - name: t9stbot
          image: tuana9a/t9stbot:2024.09.22.030448
          command: ["node", "discord-bot-main.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: discord-bot
spec:
  selector:
    app: discord-bot
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
