510-t9stbot-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t9stbot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "t9stbot.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "zione.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - t9stbot.tuana9a.com
      secretName: t9stbot-tuana9a-com-tls
  rules:
    - host: t9stbot.tuana9a.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: t9stbot
                port:
                  number: 8080
