510-t9stbot-manifests/t9stbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t9stbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t9stbot
  template:
    metadata:
      labels:
        app: t9stbot
    spec:
      containers:
        - name: t9stbot
          image: tuana9a/t9stbot:git-0def1da57f473450d4a1d103230d66a3b3ff47e1
          command: ["node", "main-webhook.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: t9stbot
spec:
  selector:
    app: t9stbot
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: t9stbot
spec:
  parentRefs:
    - kind: ListenerSet
      name: t9stbot
  hostnames:
    - t9stbot.tuana9a.com
  rules:
    - backendRefs:
        - kind: Service
          name: t9stbot
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
